# rope-utf16-splay

./: .gitattributes  .travis.yml  CHANGELOG.md  LICENSE  README.md  bench.html  rope-utf16-splay.cabal  rope-utf16.cabal  stack.yaml
src/Data/: SplayTree.hs
src/Data/Rope/: UTF16.hs
src/Data/Rope/UTF16/: Internal.hs  Position.hs
src/Data/Rope/UTF16/Internal/: Position.hs  Text.hs
tests/: Main.hs
