name:                rope-utf16
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ollef/rope-utf16
license:             BSD3
license-file:        LICENSE
author:              Olle Fredriksson
maintainer:          fredriksson.olle@gmail.com
copyright:           (c) 2018 Olle Fredriksson
category:            Data, Text, Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                       Data.Rope.UTF16
                       Data.Rope.UTF16.Internal
                       Data.Rope.UTF16.Internal.Text
                       Data.Rope.UTF16.Position
  build-depends:
                       base >= 4.7 && < 5,
                       fingertree,
                       text
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -funbox-strict-fields

source-repository head
  type:     git
  location: https://github.com/ollef/rope-utf16
